tests/variant_flow/flow_deref_switch_place_treated_as_top.sim

            enum Option: Copy + Drop { None: unit Some: i64 }
            fn f(r: &mut Option) {
              entry:
                r.* = Option::None(unit);
                switchEnum(r.*) [None: n, Some: dead]
              n: return
              dead: unreachable
            }
            